# www/api/src/Api/ImageApi.php
@@ -1,4 +1,5 @@
 <?php
+
 namespace OpenAPIServer\Api;
 
 use OpenAPIServer\Model\Tag;
@@ -10,6 +11,17 @@ use Slim\Exception\HttpNotImplementedException;
 
 class ImageApi extends AbstractImageApi
 {
+    private static function idCompare($img1, $img2)
+    {
+        if ($img1->id === $img2->id) {
+            return 0;
+        }
+        if ($img1->id > $img2->id) {
+            return 1;
+        }
+        return -1;
+    }
+
     /**
      * Route Controller constructor receives container
      *
@@ -18,11 +30,11 @@ class ImageApi extends AbstractImageApi
     public function __construct(ContainerInterface $container = null)
     {
         $this->container = $container;
-        $this->imageStore = new Store("images", __ROOT_PATH__.'/data', [
+        $this->imageStore = new Store("images", __ROOT_PATH__ . '/data', [
             'auto_cache' => true,
             'timeout' => false
         ]);
-        $this->tagStore = new Store("tags", __ROOT_PATH__.'/data', [
+        $this->tagStore = new Store("tags", __ROOT_PATH__ . '/data', [
             'auto_cache' => true,
             'timeout' => false
         ]);
@@ -34,9 +46,9 @@ class ImageApi extends AbstractImageApi
      * Summary: Returns Tags
      * Output-Formats: [application/json, application/xml]
      *
-     * @param ServerRequestInterface $request  Request
-     * @param ResponseInterface      $response Response
-     * @param array|null             $args     Path arguments
+     * @param ServerRequestInterface $request Request
+     * @param ResponseInterface $response Response
+     * @param array|null $args Path arguments
      *
      * @return ResponseInterface
      * @throws HttpNotImplementedException to force implementation class to override this method
@@ -49,27 +61,48 @@ class ImageApi extends AbstractImageApi
     }
 
     /**
-     * GET getImagesByTagName
+     * getImagesByTagName
      * Summary: Find Images by TangName
      * Notes: Returns tagged Images
+     *
+     * @param string $tagName Tagname
+     *
+     * @return array
+     */
+    private function fetchImagesByTagName($tagName)
+    {
+        $tag = $this->tagStore->findOneBy(["name", "=", $tagName])[0];
+        $images = [];
+        foreach ($tag->images as $id) {
+            $image = $this->imageStore->findOneBy(["id", "=", $id])[0];
+            $images[] = $image;
+        }
+        return $images;
+    }
+
+    /**
+     * GET findImagesByTag
+     * Summary: Finds Images by tag
+     * Notes: Muliple tags can be provided with comma separated strings. Use\\ \\ tag, mytag, anothertag for testing.
      * Output-Formats: [application/json, application/xml]
      *
-     * @param ServerRequestInterface $request  Request
-     * @param ResponseInterface      $response Response
-     * @param array|null             $args     Path arguments
+     * @param ServerRequestInterface $request Request
+     * @param ResponseInterface $response Response
+     * @param array|null $args Path arguments
      *
      * @return ResponseInterface
      * @throws HttpNotImplementedException to force implementation class to override this method
      */
-    public function getImagesByTagName(ServerRequestInterface $request, ResponseInterface $response, array $args)
+    public function findImagesByTag(ServerRequestInterface $request, ResponseInterface $response, array $args)
     {
-        $tagName = $args['tagName'];
-        $tag = $this->tagStore->findOneBy(["name", "=", $tagName])[0];
-        $images = [];
-        foreach ($tag->images as $id){
-            $image = $this->imageStore->findOneBy(["id", "=", $id])[0];
-            $images[] = $image;
+        $queryParams = $request->getQueryParams();
+        $tags = (key_exists('tags', $queryParams)) ? $queryParams['tags'] : null;
+        $sets = [];
+        foreach ($tags as $tag) {
+            $sets[] = $this->fetchImagesByTagName($tag);
         }
+        // return intersection of image-sets
+        $images = empty($sets) ? [] : array_uintersect(array_merge_recursive($sets), $sets, 'ImageApi::idCompare');
         $response->getBody()->write(json_encode($images));
         return $response->withHeader('Content-Type', 'application/json');
     }
